# ruuvi-dash

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: azure-static-web-apps-calm-stone-0bbdb5003.yml  azure-static-web-apps-witty-mushroom-03b091603.yml
app/: app.py  appp.py  archive.py.archive  requirements.txt
app/data/: ruuvidata.db
app/static/: graph.css
app/templates/: admin.html  dashboard.html  graph.html
