[project]
name = "ruuvi-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bidict>=0.23.1",
    "blinker>=1.9.0",
    "certifi>=2026.2.25",
    "charset-normalizer>=3.4.7",
    "click>=8.3.2",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "gevent>=25.9.1",
    "gevent-websocket>=0.10.1",
    "greenlet>=3.3.2",
    "gunicorn>=25.3.0",
    "h11>=0.16.0",
    "idna>=3.11",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "numpy>=2.4.4",
    "packaging>=26.0",
    "pandas>=3.0.2",
    "python-dateutil>=2.9.0.post0",
    "python-engineio>=4.13.1",
    "python-socketio>=5.16.1",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
    "setuptools>=82.0.1",
    "simple-websocket>=1.1.0",
    "six>=1.17.0",
    "tzdata>=2026.1",
    "urllib3>=2.6.3",
    "werkzeug>=3.1.8",
    "wsproto>=1.3.2",
    "zope-event>=6.1",
    "zope-interface>=8.2",
]
